<resources>
    <string name="app_name">LibraryManager</string>

    <!--EDIT TEXT-->
    <string name="edt_id_hint">Mã đăng nhập</string>
    <string name="edt_password_hint">Mật khẩu</string>

    <!--BUTTON-->
    <string name="btn_login">Đăng nhập</string>
    <string name="btn_add">Thêm</string>
    <string name="btn_cancel">Hủy</string>
    <string name="btn_update">Cập nhật</string>
    <string name="btn_delete">Xoá</string>

    <!--IMAGE DESCRIPTION-->
    <string name="img_description_logo">Logo</string>
    <string name="choose_image_from_storage">Từ bộ nhớ</string>
    <string name="take_image_using_camera">Chụp từ camera</string>
    <string name="selected_image">Hình ảnh đã chọn</string>

    <!--LABEL-->
    <string name="lbl_copyright">Made by Le Tuan Anh and Nguyen Phan Huy</string>
    <string name="status_available">Có sẵn</string>
    <string name="status_unavaiable">Đã mượn</string>Xoa
    <string name="upload_image">Chọn hình ảnh</string>
    <string name="openDrawer">Mở drawer</string>
    <string name="closeDrawer">Đóng drawer</string>
    <string name="book_hint">Tên sách không bao gồm kí tự đặc biệt và không quá 250 kí tự</string>
    <string name="lbl_book_name">Tên sách</string>
    <string name="lbl_category">Thể loại</string>
    <string name="lbl_author">Tác giả</string>

    <!--TITLE-->
    <string name="title_add_book">Thêm sách mới</string>
    <string name="delete_confirm">Xác nhận xóa</string>

    <string name="sideNavBarDescription">Navigation header</string>
    <string name="writtenBy">Written by Nguyen Phan Huy</string>
    <string name="email">17211tt3242@mail.tdc.edu.vn</string>

    <!--REGEX-->
    <string name="name_pattern">[\p{L}]{3,16}</string>
    <string name="borrow">Mượn sách</string>
    <string name="detail">Thông tin</string>
    <string name="logout">Đăng xuất</string>
    <string name="lbl_borrower_name">Người mượn</string>
    <string name="search">Tìm kiếm</string>
    <string name="search_hint">Tìm kiếm theo tên sách</string>
    <string name="lbl_borrow_date">Ngày mượn</string>
    <string name="lbl_due_date">Ngày trả</string>
    <string name="btn_confirm">Xác nhận</string>
    <string name="quit_confirm">Xác nhận thoát</string>
    <string name="logout_confirm">Xác nhận đăng xuất</string>
    <string name="sign_up">Tạo tài khoản</string>
</resources>
