<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:orientation="vertical"
    android:gravity="bottom"
    android:background="@drawable/side_nav_bar"
    android:paddingTop="@dimen/side_nav_bar_padding"
    android:paddingRight="@dimen/side_nav_bar_padding"
    android:paddingBottom="@dimen/side_nav_bar_padding"
    android:paddingLeft="@dimen/side_nav_bar_padding"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageViewAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/sideNavBarDescription"
        android:paddingTop="@dimen/side_nav_bar_child_padding"
        app:srcCompat="@mipmap/ic_launcher" />
        <!--TODO Thêm icon cho ứng dụng-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/side_nav_bar_child_padding"
        android:text="@string/writtenBy"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <TextView
        android:id="@+id/lbEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"/>
</LinearLayout>