<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:labelFor="@id/edtBookName"
            android:id="@+id/lblBookId"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/lbl_book_name"/>

        <EditText
            android:id="@+id/edtBookId"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:inputType="textFilter" />

        <ImageButton
            android:contentDescription="@string/take_image_using_camera"
            android:id="@+id/btnScanBookId"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@android:drawable/ic_menu_camera"
            android:background="@color/colorPrimary"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:labelFor="@id/edtBorrowerId"
            android:id="@+id/lblBorrowerId"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/lbl_borrower_name"/>

        <EditText
            android:id="@+id/edtBorrowerId"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:inputType="textFilter" />

        <ImageButton
            android:contentDescription="@string/take_image_using_camera"
            android:id="@+id/btnScanBorrowerId"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@android:drawable/ic_menu_camera"
            android:background="@color/colorPrimary"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width=""
        android:layout_height=""></LinearLayout>

</LinearLayout>